examples/test/testpolicy19848.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19848
  namespace: namespace141
spec:
  podSelector:
    matchLabels:
      key10: value37
      key34: value34
      key31: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value10
          key5: value25
          key31: value26
      podSelector:
        matchLabels:
          key38: value23
          key22: value13
          key2: value14
